--- a/3-1.css
+++ b/3-1.css
@@ -4,13 +4,13 @@
   display: flex;
   align-items: flex-end;
   background-color: lightskyblue;
-  border: 1px sold black;
+  border: 1px solid black;
   margin-bottom: 30px;
   }
 
   .row {
     height: 50%;
-    flex-flow: 1;
+    flex-grow: 1;
   }
 
   .row:last-child {
