--- a/6.css
+++ b/6.css
@@ -63,6 +63,36 @@ h3 {
     background-color: #a0De38;
 }
 
+
+.with-top-triangle::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    clip-path: polygon(0 0, 100% 0, 0 100% 0% 100%);
+    background-color: white;
+    z-index: 1;
+    height: 13.625vw;
+}
+
+.with-top-triangle::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    clip-path: polygon(100% calc(100% - 13.625vw), 100% 13.625vw, 100% 100%, 0% 100%);
+    background-color: white;
+    z-index: 1;
+    height: 13.625vw;
+}
+
+/*
+END OF COMMON STYLES
+*/
+
+
 .contact-me-btn {
     width: 170px;
     height: 55px;
@@ -173,6 +203,115 @@ justify-content: space-between;
 END OF SERVICES
 */
 
+.my-skills-section {
+    padding-top: 5px;
+    padding-bottom: 68px;
+}
+
+.my-skills-section .container {
+    text-align: center;
+}
+
+.my-skills-section p {
+    font-size: 14px;
+    color: #4a4a4a;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    line-height: 27px;
+}
+
+.skills-container {
+    display: grid;
+    margin-left: -30px;
+    margin-right: -30px;
+    justify-content: center;
+    justify-content: space-between;
+    grid-template-columns: repeat(5, 230px);
+}
+
+.skill-chart {
+    width: 230px;
+    height: 230px;
+    font-size: 34px;
+    font-weight: bold;
+    color:#4a4a4a;
+    position: relative;
+    text-align: center;
+    line-height: 230px;
+
+}
+.skill-chart-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.skill-chart-progress {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.skill-chart-progress.cropped {
+    left: calc(50% + 6px);
+}
+
+.skill-name {
+    font-weight: 500;
+    color: #4a4a4a;
+
+}
+/* 
+END OF MY SKILLS
+*/
+
+.portfolio.section {
+padding-top: 
+padding-left: ;
+
+}
+.portfolio.section .container {
+text-align: :center;    
+}
+
+.portfolio.section .p{
+    font-size: 14px;
+    color:  #4a4a4a;
+    line-height: 27px;
+    margin-top: 20px;
+    margin-bottom: 45px; 
+}
+
+.tabs-container {
+    display: flex;
+    justify-content: center;
+
+}
+
+.tabs-item {
+    margin-right: 27px;
+    font-weight: 500;
+    color: #4a4a4a;
+    cursor: pointer;
+}
+
+.tabs-item:hover, 
+.tabs-item.active {
+    color: #a0D334;
+}
+
+.tabs-item.active::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 43px;
+    border-bottom: 1px solid #a0D334;
+}
+.tabs-item: :last-child {
+    margin-right:0;
+}
 footer {
     height:  473px;
     background: linear-gradient() 45deg, #7Aff5f;
