--- a/test4.css
+++ b/test4.css
@@ -1,3 +1,6 @@
+a {
+    font-weight: 600;}
+
 .wrapper {
     display: grid;
     grid-template-columns: 100px 100px 100px;
@@ -10,25 +13,26 @@
     object-fit: cover;
 }
 .btn-outline-success {
-    color: red;
-    border-color: red;
+    color: forestgreen;
+    border-color: forestgreen;
 
 }
 
 .btn-outline-success:hover,
 .btn-outline-success:not(:disabled):not(.disabled):active {
-    border-color: red;
-    background-color: red;
+    border-color: forestgreen;
+    background-color: forestgreen;
 }
+
 .btn-outline-success:focus {
 box-shadow: 0 0 0 0.2rem rgba(40,167,69,.5);
 }
 
-body {
-    font-family:
-}
-
-
 .was-validated .form-control:invalid {
     padding-right: unset;
     background-image:none;
+}
+
+.card-deck {
+    padding-top: 20px;
+}
