--- a/dz2.css
+++ b/dz2.css
@@ -1,11 +1,14 @@
 body {
-    background-color: yellowgreen;
+    background: rgb(197,255,30);
+    background: linear-gradient(90deg, rgba(197,255,30,1) 35%, rgba(0,212,255,1) 100%);
 }
 
-
-p { 
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; text-shadow: 2px 4px 10px blue;
+form {
+background-color: white;
+border-radius: 10px;
+padding: 10px;
 }
+
 
 .center {
     display:flex;
@@ -13,10 +16,28 @@ p {
     justify-content: center;
 }
 
+input {
+    border: none;
+    border-radius: 5px;
+    background: rgb(197,255,30);
+    background: linear-gradient(90deg, rgba(197,255,30,1) 35%, rgba(0,212,255,1) 100%);
+}
+
+input:hover {
+    border-radius: 5px;
+    background: rgb(197,255,30);
+    background: linear-gradient(90deg, salmon 30%, rgba(197,255,30,1) 65%);
+
+}
+
 * {
+    font-family: Comic Sans MS, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
     text-align: center;
-    color: blue;
-  }
+    color: rgb(0, 140, 150);
+    
+}
 
 table {
     border: 3px dashed salmon;
