--- a/dz3.css
+++ b/dz3.css
@@ -1,48 +1,77 @@
+
 *{
-font-family: 'Raleway', sans-serif;
-}
+  font-family: 'Raleway', sans-serif;
+  }
 
-header {
- width:800px;
- height: 70px;
-}
 
-header,
-.circle {
- background-color: lightgrey;
-}
-
-.main-container {
+body {
  display: flex;
  flex-direction: column;
+ }
+
+header {
+  width: 750px;
+  height: 70px;
+  padding-bottom: 20px;
+  padding-left: 50px;
+ }
+
+ header,
+.circle {
+ background-color: #bbbbbb;
+} 
+
+.circle {
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  line-height: 50px;
+  font-size: 15px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+ }
+
+ .circle-txt {
+  font-size: 12px;
+  color: white;
+  font-weight: normal;
+ }
+
+h3 {
+  margin-bottom: 5px;
+}
+ .message {
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+ }
+
+
+.right {
+  padding-left: 20px;
+ }
+
+ .main-container {
  overflow: auto;
  width: 800px;
  height: 600px;
- background-color: rgb(95, 95, 95);
- margin-bottom: 30px;
-}
-
-.circle {
- width: 70px;
- height: 70px;
- border-radius: 50%;
- display: inline-block;
- font-size: 20px;
- line-height: 70px;
- color: white;
- font-weight: bold;
- text-align: center;
- vertical-align: middle;
-}
-
-span {
- font-weight: 600;
-}
+ background-color: #707070;
+ } 
 
 p {
- background-color: rgb(124, 145, 172);
- padding: .5em;
- font-weight: lighter;
- max-width: 70%;
-}
+  background-color: #32465A;
+  color: #f5f5f5;
+  padding: 10px;
+  max-width: 80%;
+  border-radius: 8px;
+  margin-top: 0pt;
+  margin-bottom: 0pt;
+ }
 
+span.name {
+   color: rgb(22, 39, 56);
+   font-size: smaller;
+ }
