--- a/test4.css
+++ b/test4.css
@@ -37,6 +37,120 @@ box-shadow: 0 0 0 0.2rem rgba(40,167,69,.5);
     padding-top: 20px;
 }
 
-.navbar-light .navbar-brand{
+.navbar-light .navbar-brand {
+    border-left: 4px solid forestgreen;
+    padding-left: 10px;
+    padding-bottom: 6px;
     color: forestgreen;
+}
+
+.navbar-light:hover .navbar-brand:hover {
+    border-left: 4px solid rgba(40,167,69,.5);
+    padding-left: 10px;
+    padding-bottom: 6px;
+    color:rgba(40,167,69,.5);
+ }
+
+ .nav-tabs .nav-link{
+    color: forestgreen;
+ }
+
+ .nav-tabs:hover .nav-link:hover {
+    color:rgba(40,167,69,.5);
+ }
+
+h5.inform {
+    padding: 30px 0 20px 0;
+}
+
+
+/* Footer */
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+section {
+    padding: 50px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: #007b5e;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+
+}
+
+#footer {
+    background: forestgreen;
+}
+#footer h5{
+	padding-left: 10px;
+    border-left: 3px solid #eeeeee;
+    padding-bottom: 6px;
+    margin-bottom: 20px;
+    color:#ffffff;
+}
+#footer a {
+    color: #ffffff;
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
+#footer ul.social li{
+	padding: 3px 0;
+}
+#footer ul.social li a i {
+    margin-right: 5px;
+	font-size:25px;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+#footer ul.social li:hover a i {
+	font-size:30px;
+	margin-top:-10px;
+}
+#footer ul.social li a,
+#footer ul.quick-links li a{
+	color:#ffffff;
+}
+#footer ul.social li a:hover{
+	color:#eeeeee;
+}
+#footer ul.quick-links li{
+	padding: 3px 0;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+#footer ul.quick-links li:hover{
+	padding: 3px 0;
+	margin-left:5px;
+	font-weight:700;
+}
+#footer ul.quick-links li a i{
+	margin-right: 5px;
+}
+#footer ul.quick-links li:hover a i {
+    font-weight: 700;
+}
+
+.fa-facebook-f:before, .fa-facebook:before {
+    content: "\f09a";
+}
+.fa-twitter:before {
+    content: "\f099";
+}
+.fa-instagram:before {
+    content: "\f16d";
+}
+.fa-envelope:before {
+    content: "\f0e0";
+}
+
+@media (max-width:767px){
+	#footer h5 {
+    padding-left: 0;
+    border-left: transparent;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
+}
 }
