--- a/mark-antony-master/mark-antony-master2/common.css
+++ b/mark-antony-master/mark-antony-master2/common.css
@@ -81,23 +81,38 @@ h3 {
 .modal {
     position: fixed;
     top: 0;
-    left: 0;
     bottom: 0;
+    left: 0;
     right: 0;
-    background-color: wheat;
-    z-index:6;
+    z-index: 6;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: all .6s ease;
+    opacity: 0;
+}
+
+.modal-inner {
+    position: absolute;
+    top: 80px;
+    width: 40vw;
+    background-color: white;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all .6s ease;
+    transition-delay: 2s;
 }
 
 .modal.visible {
-    display: block;
-    left: ;
-    transform: translateX(-50%);
-
+    opacity: 1;
+    pointer-events: all;
 }
+
 
 /*
     END OF COMMON-STYLES
 */
+
+
 /*
     HEADER
 */
@@ -106,6 +121,9 @@ header {
     position: fixed;
     width: 100%;
     z-index: 5;
+    padding: 10px 0;
+    background-color: transparent;
+    transition: background-color .4s ease;
 }
 
 header .container {
@@ -146,16 +164,19 @@ nav {
     background-color: rgba(255, 255, 255, .4);
 }
 
+
 /*
     END OF HEADER
 */
+
 footer {
     height: 473px;
+    padding-top: 60px;
     background: linear-gradient(45deg, #7A39DB, #6048FF);
 }
 
 .awesome-cbx {
-font-size: 20px;
+    font-size: 20px;
 }
 
 .awesome-cbx input {
@@ -163,46 +184,46 @@ font-size: 20px;
 }
 
 .awesome-cbx span {
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .awesome-cbx span::before {
     content: '';
     display: inline-block;
-    width:24px;
+    width: 24px;
     height: 24px;
     border: 1px solid yellow;
-    background-color: wheat;
+    background-color: white;
     margin-right: 8px;
     border-radius: 4px;
     text-align: center;
     line-height: 24px;
     font-size: 20px;
-
 }
 
-.awesome-cbx input:checked + span::before {
+.awesome-cbx input:checked+span::before {
     content: '+';
     background-color: lightgreen;
 }
+
 .hamburger {
-    display:none;
+    display: none;
 }
 
-  /* MOBILE */
 
-@media (max-width 900px;) {
-    /* Burger /
-    
+/*   MOBILE   */
+
+@media (max-width: 900px) {
+    /*   BURGER   */
     /*!
-     * Hamburgers
-     * @description Tasty CSS-animated hamburgers
-     * @author Jonathan Suh @jonsuh
-     * @site https://jonsuh.com/hamburgers
-     * @link https://github.com/jonsuh/hamburgers
-     */
-     .hamburger {
+    * Hamburgers
+    * @description Tasty CSS-animated hamburgers
+    * @author Jonathan Suh @jonsuh
+    * @site https://jonsuh.com/hamburgers
+    * @link https://github.com/jonsuh/hamburgers
+    */
+    .hamburger {
         padding: 15px 15px;
         display: inline-block;
         cursor: pointer;
@@ -215,114 +236,130 @@ align-items: center;
         background-color: transparent;
         border: 0;
         margin: 0;
-        overflow: visible; }
-        .hamburger:hover {
-          opacity: 0.7; }
-        .hamburger.is-active:hover {
-          opacity: 0.7; }
-        .hamburger.is-active .hamburger-inner,
-        .hamburger.is-active .hamburger-inner::before,
-        .hamburger.is-active .hamburger-inner::after {
-          background-color: #FFF; }
-      
-      .hamburger-box {
+        overflow: visible;
+    }
+    .hamburger:hover {
+        opacity: 0.7;
+    }
+    .hamburger.is-active:hover {
+        opacity: 0.7;
+    }
+    .hamburger.is-active .hamburger-inner,
+    .hamburger.is-active .hamburger-inner::before,
+    .hamburger.is-active .hamburger-inner::after {
+        background-color: #fff;
+    }
+    .hamburger-box {
         width: 40px;
         height: 24px;
         display: inline-block;
-        position: relative; }
-      
-      .hamburger-inner {
+        position: relative;
+    }
+    .hamburger-inner {
         display: block;
         top: 50%;
-        margin-top: -2px; }
-        .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-          width: 40px;
-          height: 4px;
-          background-color: #FFF;
-          border-radius: 4px;
-          position: absolute;
-          transition-property: transform;
-          transition-duration: 0.15s;
-          transition-timing-function: ease; }
-        .hamburger-inner::before, .hamburger-inner::after {
-          content: "";
-          display: block; }
-        .hamburger-inner::before {
-          top: -10px; }
-        .hamburger-inner::after {
-          bottom: -10px; }
-      
-
-     
-     
-      .hamburger--vortex .hamburger-inner {
-        transition-duration: 0.2s;
-        transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1); }
-        .hamburger--vortex .hamburger-inner::before, .hamburger--vortex .hamburger-inner::after {
-          transition-duration: 0s;
-          transition-delay: 0.1s;
-          transition-timing-function: linear; }
-        .hamburger--vortex .hamburger-inner::before {
-          transition-property: top, opacity; }
-        .hamburger--vortex .hamburger-inner::after {
-          transition-property: bottom, transform; }
-      
-      .hamburger--vortex.is-active .hamburger-inner {
-        transform: rotate(765deg);
-        transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1); }
-        .hamburger--vortex.is-active .hamburger-inner::before, .hamburger--vortex.is-active .hamburger-inner::after {
-          transition-delay: 0s; }
-        .hamburger--vortex.is-active .hamburger-inner::before {
-          top: 0;
-          opacity: 0; }
-        .hamburger--vortex.is-active .hamburger-inner::after {
-          bottom: 0;
-          transform: rotate(90deg); }
-
-header {
-    background-color: #673ab7c9;
-
-}
-
-.container{
-    max-width: 92vw;
-}
-header.container {
-    height: 58px;
-
-}
-
-header img {
-margin-left: 50px;
-position: relative;
-top: -3px;
-}
-
-          nav {
-              position: absolute;
-              left: 0;
-              flex-direction: column;
-              width: auto;
-              padding: 15px 30px;
-              top: 100%;
-              transition: transform .4s; ease-in-out;
-              transform: translateX (-100%);  
-              background-color: #673ab7c9;
-          }
+        margin-top: -2px;
+    }
+    .hamburger-inner,
+    .hamburger-inner::before,
+    .hamburger-inner::after {
+        width: 40px;
+        height: 4px;
+        background-color: #fff;
+        border-radius: 4px;
+        position: absolute;
+        transition-property: transform;
+        transition-duration: 0.15s;
+        transition-timing-function: ease;
+    }
+    .hamburger-inner::before,
+    .hamburger-inner::after {
+        content: "";
+        display: block;
+    }
+    .hamburger-inner::before {
+        top: -10px;
+    }
+    .hamburger-inner::after {
+        bottom: -10px;
+    }
+    /*
+        * Emphatic
+        */
+    .hamburger--emphatic {
+        overflow: hidden;
+    }
+    .hamburger--emphatic .hamburger-inner {
+        transition: background-color 0.125s 0.175s ease-in;
+    }
+    .hamburger--emphatic .hamburger-inner::before {
+        left: 0;
+        transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335), top 0.05s 0.125s linear, left 0.125s 0.175s ease-in;
+    }
+    .hamburger--emphatic .hamburger-inner::after {
+        top: 10px;
+        right: 0;
+        transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335), top 0.05s 0.125s linear, right 0.125s 0.175s ease-in;
+    }
+    .hamburger--emphatic.is-active .hamburger-inner {
+        transition-delay: 0s;
+        transition-timing-function: ease-out;
+        background-color: transparent !important;
+    }
+    .hamburger--emphatic.is-active .hamburger-inner::before {
+        left: -80px;
+        top: -80px;
+        transform: translate3d(80px, 80px, 0) rotate(45deg);
+        transition: left 0.125s ease-out, top 0.05s 0.125s linear, transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    .hamburger--emphatic.is-active .hamburger-inner::after {
+        right: -80px;
+        top: -80px;
+        transform: translate3d(-80px, 80px, 0) rotate(-45deg);
+        transition: right 0.125s ease-out, top 0.05s 0.125s linear, transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    header {
+        background-color: #673ab7c9;
+    }
+    .container {
+        max-width: 92vw;
+    }
+    header .container {
+        height: 58px;
+    }
+    header img {
+        margin-left: 50px;
+        position: relative;
+        top: -3px;
+    }
+    nav {
+        position: absolute;
+        left: 0;
+        flex-direction: column;
+        width: auto;
+        padding: 15px 30px;
+        top: 100%;
+        transition: transform .4s ease-in-out;
+        transform: translateX(-100%);
+        background-color: #673ab7c9;
+    }
     .nav-link {
         font-size: 24px;
         margin-bottom: 10px;
     }
-
     .nav-link:last-child {
         margin-bottom: 0;
     }
-
-          #burger{
-              position: absolute;
-              left: 0;
-          }
-          #burger.is-active ~ nav {
-              transform:  translateX(0);
-          }
+    #burger {
+        position: absolute;
+        left: 0;
+    }
+    #burger.is-active~nav {
+        transform: translateX(0);
+    }
+    .contact-me-btn {
+        width: 120px;
+        height: 34px;
+        line-height: 34px;
+    }
 }
